<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">다매체대화기</string>
    <string name="app_version">1.0.0</string>
    <string name="im_label">다매체대화기</string>
    <string name="notification_title">다매체대화기</string>
    <string name="desc_image">화상</string>
    <string name="title_contacts">주소록</string>
    <string name="copyright_desc">천하관 2025</string>
    <string name="app_publish_id">이 제품은 콤퓨터쏘프트웨어보호법에 의하여\n 보호됩니다.     ㄱ-12345678</string>
    <string name="version_update">갱신</string>
    <string name="ok">확인</string>
    <string name="select_friends_title">대화자 선택</string>
    <string name="chat_room_send_text">본문통보문…</string>
    <string name="chatid_hint">6~20자의 영어,수자, “_”의 조합으로서 반드시 영어로 시작하여야 합니다.</string>
    <string name="title_chat">대화</string>
    <string name="title_chat_list">대화목록</string>
    <string name="title_my_info">나의 정보</string>
    <string name="title_settings">설정</string>
    <string name="cancel">취소</string>
    <string name="save">보존</string>
    <string name="my_profile">나의 정보</string>
    <string name="chat_search">대화내용 검색</string>
    <string name="qrcode_scan">QR코드 읽기</string>
    <string name="delete">삭제</string>
    <string name="camera">동영상촬영</string>
    <string name="photo_camera">사진촬영</string>
    <string name="choose_fileselect">화일선택</string>
    <string name="delete_warning">통화중이므로 주소를 삭제할수 없습니다.</string>
    <string name="confirm_out_room">《%s》대화방에서 나가겠습니까?</string>
    <string name="str_leave">대화방탈퇴</string>
    <string name="send">전송</string>
    <string name="confirm_accept">《%s》사용자의 주소추가요청을 승인하겠습니까?</string>
    <string name="confirm_decline">《%s》사용자의 주소추가요청을 거절하겠습니까?</string>
    <string name="confirm_cancel">《%s》사용자의 주소추가요청을 취소하겠습니까?</string>
    <string name="contact_joined"><xliff:g id="user">%1$s</xliff:g>사용자가 접속하였습니다.</string>
    <string name="contact_left"><xliff:g id="user">%1$s</xliff:g>사용자가 대화방에서 탈퇴하였습니다.</string>
    <string name="contact_online"><xliff:g id="user">%1$s</xliff:g>사용자가 가입하였습니다.</string>
    <string name="contact_offline"><xliff:g id="user">%1$s</xliff:g>사용자가 가입탈퇴하였습니다.</string>
    <string name="contact_away"><xliff:g id="user">%1$s</xliff:g>자리비움</string>
    <string name="contact_busy"><xliff:g id="user">%1$s</xliff:g>사용자는 일하고있습니다.</string>
    <string name="mic_discription">누른채로 유지하고 록음</string>
    <string name="error_voice_length_short">록음시간이 너무 짧습니다.</string>
    <string name="cannot_use_storage">전화기기억기를 리용할수 없습니다.</string>
    <string name="draft_remove">통보문이 편집중에 있습니다. 탈퇴하면 편집중인 통보문이 삭제됩니다.</string>
    <string name="save_path">전화기기억기/Download/다매체대화기</string>
    <string name="file_choose_limit">화일을 9개이상 선택할수 없습니다.</string>
    <string name="error_file_type">화일형식이 정확하지 않습니다.</string>
    <string name="no_chat">대화리력이 없습니다.</string>
    <string name="chat_menu_copy_msg">복사</string>
    <string name="chat_menu_resend">재전송</string>
    <string name="title_myprofile">나의 정보</string>
    <string name="confirm">확인</string>
    <string name="password_confirm">암호확인</string>
    <string name="accept_invitation">접수</string>
    <string name="decline_invitation">거절</string>
    <string name="title_server_error">봉사기오유</string>
    <string name="content_server_error">봉사기에서 문제가 발생하였습니다. 프로그람을 재기동하여야 합니다.</string>
    <string name="input_password">이 암호는 무효합니다. 다시 입력하십시오.</string>
    <string name="content_loginError">봉사기에 가입할수 없습니다.</string>
    <string name="content_connectError">봉사기와의 접속이 실패하였습니다.</string>
    <string name="help">도움말</string>
    <string name="search">검색</string>
    <string name="password">암호</string>
    <string name="login">가입</string>
    <string name="signup">새로 등록</string>
    <string name="setting">설정</string>
    <string name="setting_title_log_out">가입탈퇴</string>
    <string name="subscription_notify_text"><xliff:g id="user">%s</xliff:g>사용자로부터 주소추가요청</string>
    <string name="unsubscription_notify_text"><xliff:g id="user">%s</xliff:g>사용자가 당신을 주소록에서 삭제하였습니다.</string>
    <string name="subscription_decline_notify_text"><xliff:g id="user">%s</xliff:g>사용자가 당신의 주소추가요청을 거절하였습니다.</string>
    <string name="subscription_cancel_notify_text"> \"<xliff:g id="user">%s</xliff:g>\"사용자s가 당신의 주소추가요청을 취소하였습니다.</string>
    <string name="subscription_approved_notify_text"> \"<xliff:g id="user">%s</xliff:g>\"사용자가 당신의 주소록에 추가되였습니다.</string>
    <string name="notify_groupchat_label">다자대화요청</string>
    <string name="group_chat_invite_notify_text"><xliff:g id="user">%s</xliff:g>대화방에서 대화요청이 들어왔습니다.</string>
    <string name="status_bar_sent_image">화상</string>
    <string name="status_bar_sent_audio">음성</string>
    <string name="status_bar_sent_video">동영상</string>
    <string name="status_bar_sent_file">화일</string>
    <string name="status_bar_str_group_chat">다자대화</string>
    <string name="error">오유</string>
    <string name="select_contact">주소를 선택하여야 합니다.</string>
    <string name="group_chat_limit">사용자를 9명이상 선택할수 없습니다.</string>
    <string name="network_error">망접속상태를 확인해주십시오.</string>
    <string name="not_signed_in">가입이 실패하였습니다.</string>
    <string name="unknown_file_format">지원하지 않는 화일형식입니다.</string>
    <string name="loading">적재중…</string>
    <string name="provider_full_name_xmpp">통보문전송초과</string>
    <string name="signed_out_prompt_with_error">가입탈퇴오유</string>
    <string name="friend_requests_title">받은 요청</string>
    <string name="friend_requests_title_receive">개의 요청 있음</string>
    <string name="friend_requests_title_sent">보낸 요청</string>
    <string name="friend_requests_no_received_friends">받은 요청이 없습니다.</string>
    <string name="friend_requests_no_sent_friends">보낸 요청이 없습니다.</string>
    <string name="friend_find_by_id_or_name_title">식별자 또는 전화번호검색</string>
    <string name="friend_find_title">식별자나 전화번호로 대화자 찾기</string>
    <string name="friend_find_by_id_or_name_finding_friends">사용자검색중…</string>
    <string name="friend_list_edit_no_friends">등록된 주소가 없습니다.</string>
    <string name="chat_list_picatalk_team_name">다매체대화기관리자</string>
    <string name="logout_confirm">가입탈퇴를 할 때 대화관련자료들이 삭제되지는 않습니다.\n그러나 새 대화내용이 들어오는데 대한 알림통보는 받지 못합니다.</string>
    <string name="logout_logout_btn_text">가입탈퇴</string>
    <string name="logout_message_wait_for_logging_out">가입탈퇴중…</string>
    <string name="images_and_videos">화상 및 동영상</string>
    <string name="str_add_friend">새 주소 추가</string>
    <string name="msg_for_find_friends_failure">사용자가 존재하지 않습니다.</string>
    <string name="event_name">이름</string>
    <string name="not_sent">전송실패</string>
    <string name="inReady">대기중…</string>
    <string name="inProgress">전송중…</string>
    <string name="inCompress">압축중…</string>
    <string name="invite_voice_call">음성통화요청입니다…</string>
    <string name="waiting_for_response">응답대기중…</string>
    <string name="button_done">보존</string>
    <string name="passwords_not_match">입력한 암호와 암호확인이 서로 다릅니다.</string>
    <string name="passwords_length_not_enough">암호는 6~20자로 되여야 합니다.</string>
    <string name="error_call_declined">호출실패</string>
    <string name="error_user_not_found">호출실패</string>
    <string name="audio_call">음성호출</string>
    <string name="video_call">동영상호출</string>
    <string name="invite_video_call">동영상통화요청입니다…</string>
    <string name="service_name">다매체대화기</string>
    <string name="incall_notif_active">호출중…</string>
    <string name="incall_notif_paused">호출대기중…</string>
    <string name="incall_notif_audio">통화중…</string>
    <string name="incall_notif_video">통화중…</string>
    <string name="couldnt_accept_call">응답실패</string>
    <string name="register">승인</string>
    <string name="accept">응답</string>
    <string name="decline">끝내기</string>
    <string name="unknown_incoming_call_name">등록되지 않은 사용자</string>
    <string name="no_contact_to_add">추가할수 있는 사용자가 존재하지 않습니다.</string>
    <string name="no_tag">주소모임이 존재하지 않습니다.</string>
    <string name="delete_contact">주소록에서 삭제</string>
    <string name="phone_number">손전화번호</string>
    <string name="phone_number_hint">1911234567</string>
    <string name="error_unknown">호출실패</string>
    <string name="error_incompatible_media">호출실패</string>
    <string name="error_low_bandwidth">망대역문제로 하여 동영상호출을 진행할수 없습니다.</string>
    <string name="error_network_unreachable">망접속이 실패하였습니다. 접속상태를 확인하여야 합니다.</string>
    <string name="error_bad_credentials">인증화일이 정확하지 않습니다.</string>
    <string name="error_unauthorized">인증이 실패하였습니다.</string>
    <string name="error_io_error">망접속이 실패하였습니다. 접속상태를 확인하여야 합니다.</string>
    <string name="unread_messages">%i 읽지 않은 통보문</string>
    <string name="select">선택</string>
    <string name="create_filse_send">다매체화일</string>
    <string name="tab_label_image">화상</string>
    <string name="tab_label_video">동영상</string>
    <string name="tab_label_audio">음악</string>
    <string name="tab_label_file">화일</string>
    <string name="declined">요청거절</string>
    <string name="cancelled">취소함</string>
    <string name="duration">통화시간</string>
    <string name="not_accept">받지못함</string>
    <string name="no_answer">응답없음</string>
    <string name="busy">통화중…</string>
    <string name="call_failure">호출실패</string>
    <string name="delete_conversation">대화방 삭제</string>
    <string name="change_group_name">대화방이름변경</string>
    <string name="title_add_contacts">주소추가</string>
    <string name="tags">주소모임</string>
    <string name="search_contact">주소검색</string>
    <string name="mobile_contacts">손전화기주소록</string>
    <string name="add_from_mobile_address_book">손전화기주소록으로부터 추가</string>
    <string name="all_tags">주소모임</string>
    <string name="new_tag">새 주소모임</string>
    <string name="tag_name">주소모임의 이름</string>
    <string name="members">포함된 주소들</string>
    <string name="edit_tag">편집</string>
    <string name="tag_remove">주소모임이 편집중에 있습니다. 탈퇴하면 편집중인 주소모임이 삭제됩니다.</string>
    <string name="about">프로그람정보</string>
    <string name="no">아니</string>
    <string name="yes">예</string>
    <string name="call_paused_by_remote">상대방이 호출대기중입니다.</string>
    <string name="reset">재설정</string>
    <string name="delete_contact_msg">이 주소를 삭제하겠습니까?</string>
    <string name="add">추가</string>
    <string name="send_a_friend_request_first">요청통보문</string>
    <string name="friend_request">추가요청</string>
    <string name="write_greeting">요청통보문…</string>
    <string name="get_profile_error">주소록정보를 읽을수 없습니다.</string>
    <string name="save_this_change">보관하겠습니까?</string>
    <string name="don_t_save">아니</string>
    <string name="choose_profilephoto">화상화일 선택</string>
    <string name="new_photo_camera">사진 촬영</string>
    <string name="speaker_outgoing">증폭</string>
    <string name="mute_outgoing">음차단</string>
    <string name="switch_camera">카메라절환</string>
    <string name="to_voice_call">음성통화로 전환</string>
    <string name="help_index_1">1 《다매체대화기》에 대하여</string>
    <string name="help_index_2">2 등록 및 가입</string>
    <string name="help_index_2_1">2.1 등록</string>
    <string name="help_index_2_2">2.2 가입</string>
    <string name="help_index_3">3 대화</string>
    <string name="help_index_3_1">3.1 대화목록</string>
    <string name="help_index_3_2">3.2 대화기능</string>
    <string name="help_index_3_2_1">3.2.1 본문통보문</string>
    <string name="help_index_3_2_2">3.2.2 음성통보문</string>
    <string name="help_index_3_2_3">3.2.3 음성통화</string>
    <string name="help_index_3_2_4">3.2.4 동영상통화</string>
    <string name="help_index_3_2_5">3.2.5 화일전송</string>
    <string name="help_index_3_3">3.3 대화내용 삭제</string>
    <string name="help_index_3_4">3.4 대화내용 검색</string>
    <string name="help_index_3_5">3.5 다자대화</string>
    <string name="help_index_4">4 주소록</string>
    <string name="help_index_4_1">4.1 주소추가</string>
    <string name="help_index_4_1_1">4.1.1 받은 요청 처리</string>
    <string name="help_index_4_1_2">4.1.2 주소 추가</string>
    <string name="help_index_4_2">4.2 주소정보</string>
    <string name="help_index_4_3">4.3 주소 삭제</string>
    <string name="help_index_5">5 설정</string>
    <string name="help_index_5_1">5.1 나의 정보</string>
    <string name="help_index_5_2">5.2 프로그람정보</string>
    <string name="help_index_5_3">5.3 도움말</string>
    <string name="help_index_6">6 가입 탈퇴</string>
</resources>