<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/topLayout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/white"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:orientation="vertical"
		android:gravity="center">

		<RelativeLayout
			android:layout_width="@dimen/calling_profile_size"
			android:layout_height="@dimen/calling_profile_size">

			<com.multimediachat.ui.views.CircularImageView
				android:id="@+id/profileImg"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:src="@drawable/profilephoto" />

		</RelativeLayout>

		<TextView
			android:id="@+id/txt_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/margin_s"
			android:textColor="@color/font_text_color"
			android:ellipsize="marquee"
			android:marqueeRepeatLimit="marquee_forever"
			android:singleLine="true"
			android:textSize="@dimen/font_level_8" />

		<TextView
			android:id="@+id/txt_outgoing_type"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/waiting_for_response"
			android:textColor="@color/gray_label_color"
			android:textSize="@dimen/font_level_6" />

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_marginVertical="@dimen/margin_l"
		android:orientation="horizontal">

		<LinearLayout
			android:id="@+id/lyt_mute"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:paddingVertical="@dimen/default_padding_size"
			android:gravity="center"
			android:orientation="vertical"
			android:visibility="gone">

			<ImageView
				android:id="@+id/btn_mute"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/margin_m"
				android:src="@drawable/btn_mute"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/mute_outgoing"
				android:textColor="@color/font_text_color"
				android:textSize="@dimen/font_level_4"/>

		</LinearLayout>

		<LinearLayout
			android:id="@+id/lyt_to_voice_call"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:paddingVertical="@dimen/default_padding_size"
			android:gravity="center"
			android:orientation="vertical"
			android:visibility="gone">

			<ImageView
				android:id="@+id/btn_to_voice_call"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/margin_m"
				android:src="@drawable/btn_to_voice_call"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/to_voice_call"
				android:textColor="@color/font_text_color"
				android:textSize="@dimen/font_level_4"/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:paddingVertical="@dimen/default_padding_size"
			android:gravity="center"
			android:orientation="vertical">

			<ImageView
				android:id="@+id/btn_hangup"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/margin_m"
				android:src="@drawable/btn_decline"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/cancel"
				android:textColor="@color/font_text_color"
				android:textSize="@dimen/font_level_4"/>

		</LinearLayout>

		<LinearLayout
			android:id="@+id/lyt_speaker"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:paddingVertical="@dimen/default_padding_size"
			android:gravity="center"
			android:orientation="vertical"
			android:visibility="gone">

			<ImageView
				android:id="@+id/btn_speaker"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/margin_m"
				android:src="@drawable/btn_outgoing_speaker"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/speaker_outgoing"
				android:textColor="@color/font_text_color"
				android:textSize="@dimen/font_level_4"/>

		</LinearLayout>

		<LinearLayout
			android:id="@+id/lyt_switch_camera"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:paddingVertical="@dimen/default_padding_size"
			android:gravity="center"
			android:orientation="vertical"
			android:visibility="gone">

			<ImageView
				android:id="@+id/btn_switch_camera"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/margin_m"
				android:src="@drawable/btn_outgoing_switch_camera"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/switch_camera"
				android:textColor="@color/font_text_color"
				android:textSize="@dimen/font_level_4"/>

		</LinearLayout>

	</LinearLayout>

</LinearLayout>
